<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.emotion.emotion.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:ignore="ExtraText,MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/btnSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="72dp"
            android:layout_marginTop="23dp"
            android:text="@string/btn_sound" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tvSound"
            android:layout_marginStart="34dp"
            android:layout_toEndOf="@+id/btnSound"
            android:text="@string/btn_clear" />

        <TextView
            android:id="@+id/tvSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="42dp"
            android:gravity="center"
            android:text="@string/start_talk"
            android:textColor="#000000"
            android:textSize="20sp" />/>

        <TextView
            android:id="@+id/tvResp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSound"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/tv_empty"
            android:textColor="#000000"
            android:textSize="20sp" />/>

        <ImageView
            android:id="@+id/ivResp"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_below="@+id/tvResp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="75dp"
            android:contentDescription=""
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvRefer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/tv_line_pic" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
